--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,8 +8,11 @@ steps:
   args:
     - -c
     - |
-      docker build -t gcr.io/$PROJECT_ID/${_SERVICE} . &&
+      export IMAGE=${_REPO_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE}
+      docker build -t ${_REPO_REGION}-docker.pkg.dev/$PROJECT_ID/${_REPO}/${_SERVICE} . &&
       docker push gcr.io/$PROJECT_ID/${_SERVICE}
+      echo $IMAGE
+      echo $IMAGE
 
 - id: gcloud-run-deploy-placeholders-run-bigquery
   waitFor: ['docker-build-push-placeholders-run-bigquery']
@@ -31,3 +34,5 @@ steps:
 substitutions:
   _SERVICE: placeholders-run-bigquery
   _REGION: us-central1
+  _REPO_REGION: us
+  _REPO: containers
