updates to cloudbuild.yaml, nginx.conf

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-export PROXY_HOST="127.0.0.1"
-export PROXY_PORT="9080"
-export PROJECT_ID="holy-diver-297719"
-export DATASET_ID="testing"
-export TABLE_ID="gsa_placeholder_testing"
+PROXY_HOST="127.0.0.1"
+PROXY_PORT="9080"
+PROJECT_ID="holy-diver-297719"
+DATASET_ID="testing"
+TABLE_ID="gsa_placeholder_testing"
+VITE_PROJECT_ID="holy-diver-297719"
+VITE_DATASET_ID="testing"
+VITE_TABLE_ID="gsa_placeholder_testing"
+
