--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,6 +32,7 @@ steps:
         --min-instances 0 \
         --max-instances 1 \
         --allow-unauthenticated \
+        --service-account ${_SERVICE_ACCOUNT} \
         --set-env-vars=PROJECT_ID=$PROJECT_ID,DATASET_ID=${_DATASET_ID},TABLE_ID=${_TABLE_ID}
 
 substitutions:
@@ -41,3 +42,4 @@ substitutions:
   _REPO: containers
   _DATASET_ID: testing
   _TABLE_ID: gsa_placeholder_testing
+  _SERVICE_ACCOUNT: 427573902620-compute@developer.gserviceaccount.com
